completed header and started projects and contact]

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Christine Le</title>
+  <!-- <link rel="stylesheet" href="css/reset.css"> -->
   <link rel="stylesheet" href="css/style.css">
-  <script src="https://kit.fontawesome.com/24e1f3bbee.js" crossorigin="anonymous"></script>
+<link href="https://fonts.googleapis.com/css?family=Glegoo:400,700|Raleway|Satisfy&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/24e1f3bbee.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -20,8 +22,8 @@
 
   <div class="brand-statement-bg">
     <div class="brand-statement">
-      <h2>Full Stack Developer based in NYC passionate about making
-        tech accessible to all.</h2>
+      <h2>Full Stack Developer based in NYC<br/> passionate about making
+        tech<br/> accessible to all.</h2>
         <div class = "social-links">
           <i class="fab fa-linkedin"></i>
           <i class="fab fa-github"></i>
