started the envelope contact form

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Christine Le</title>
   <!-- <link rel="stylesheet" href="css/reset.css"> -->
   <link rel="stylesheet" href="css/style.css">
-<link href="https://fonts.googleapis.com/css?family=Glegoo:400,700|Raleway|Satisfy&display=swap" rel="stylesheet">
-<script src="https://kit.fontawesome.com/24e1f3bbee.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css?family=Glegoo:400,700|Raleway|Satisfy&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/24e1f3bbee.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -55,19 +55,24 @@
 
     <h2 id = "contact">[<span class="section">contact</span>]</h2>
     <div class="contact-form">
-      <div class="envelope flap">
-      </div>
-      <div class="envelope letter">
-        <h3>Let's get in touch!</h3>
-        <input type="text" class="contact-name" placeholder="name">
-        </input>
-        <input type="text" class="contact-email" placeholder="email">
-        </input>
-        <textarea placeholder="message">
-        </textarea>
-        <button type="submit" value="Submit">Send
-        </button>
+
+      <div class="envelope">
+        <div class="paper">
+          <div class="letter">
+            <h3>Let's get in touch!</h3>
+          <input type="text" class="contact-name" placeholder="name">
+          </input>
+          <input type="text" class="contact-email" placeholder="email">
+          </input>
+          <textarea placeholder="message">
+          </textarea>
+          <button type="submit" value="Submit">Send
+          </button>
+        </div>
       </div>
     </div>
-  </body>
-  </html>
+
+    </div>
+
+</body>
+</html>
