--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Christine Le</title>
-  <!-- <link rel="stylesheet" href="css/reset.css"> -->
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/contact.css">
   <link href="https://fonts.googleapis.com/css?family=Glegoo:400,700|Raleway|Satisfy&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/24e1f3bbee.js" crossorigin="anonymous"></script>
 </head>
@@ -13,7 +14,7 @@
   <header>
     <h1> Christine Le</h1>
     <nav>
-      <a href="#">about</a>
+      <a href="/about.html">about</a>
       <a href="#projects">projects</a>
       <a href="#">resume</a>
       <a href="#contact">contact</a>
@@ -25,9 +26,9 @@
       <h2>Full Stack Developer based in NYC<br/> passionate about making
         tech<br/> accessible to all.</h2>
         <div class = "social-links">
-          <i class="fab fa-linkedin"></i>
-          <i class="fab fa-github"></i>
-          <i class="fab fa-medium"></i>
+          <a href ="mailto:christine.le244@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/christinele3/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href ="https://github.com/le-christine" target="_blank"><i class="fab fa-github"></i></a>
         </div>
       </div>
     </div>
@@ -36,43 +37,48 @@
 
     <div class="device-wrapper">
       <div class="device-row">
-        <div class="device">
-        </div>
-        <div class="device">
-        </div>
-        <div class="device">
-        </div>
+          <div class="project"><img class="project-mock"/></div>
+          <div class="project"><img class="project-mock tearoom"/></div>
+          <div class="project"><img class="project-mock "/></div>
       </div>
       <div class="device-row">
-        <div class="device">
-        </div>
-        <div class="device">
-        </div>
-        <div class="device">
-        </div>
+          <div class="project"><img class="project-mock dentist"/></div>
+          <div class="project"><img class="project-mock spottunes"/></div>
+          <div class="project"><img class="project-mock weather"/></div>
       </div>
     </div>
 
     <h2 id = "contact">[<span class="section">contact</span>]</h2>
+
     <div class="contact-form">
+      <div id="contact">
 
-      <div class="envelope">
-        <div class="paper">
-          <div class="letter">
-            <h3>Let's get in touch!</h3>
-          <input type="text" class="contact-name" placeholder="name">
-          </input>
-          <input type="text" class="contact-email" placeholder="email">
-          </input>
-          <textarea placeholder="message">
-          </textarea>
-          <button type="submit" value="Submit">Send
-          </button>
-        </div>
-      </div>
-    </div>
+            <div id="card">
+              <form>
+                <div id="leftbox">
+                  <textarea name="message" COLS="35" ROWS="25" placeholder="Your message" required></textarea>
+
+                </div>
+                <div id="rightbox">
+                  <div id="send">
+                    <input class="sendbutton" type="submit" value="Send">
+                  </div>
+                  <div class="line">
+                    <div id="input">
+
+                      <input type="text" name="name" placeholder="Name">
+                      <input type="email" name="email" placeholder="E-mail" required>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+      		</div>
 
     </div>
+<script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-app.js"></script>
+<script src="js/firebase-sdk.js"></script>
+
 
 </body>
 </html>
