--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header>
-    <h1> Christine Le</h1>
+  <h1><a href="/index.html">Christine Le</a></h1>
     <nav>
       <a href="/about.html">about</a>
       <a href="/index.html#projects">projects</a>
