--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 
         <div id="postcard-back">
           <div id="leftbox">
-            <textarea class="userMsg" name="message" COLS="35" ROWS="25" placeholder="Your message" required>
-            </textarea>
+            <textarea class="userMsg" name="message" COLS="35" ROWS="25" placeholder="Your message" required></textarea>
           </div>
 
           <div id="rightbox">
