--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </div>
 
           <div id="rightbox">
-            <button onClick="flipBack()" class="send">Send
+            <button onClick="flipBack();postAnEmail()" class="send">Send
             </button>
             <div id="input">
               <input class="userName" type="text" name="name" placeholder="Name">
@@ -79,7 +79,6 @@
     <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-firestore.js"></script>
     <script src="js/firebase-sdk.js"></script>
-    <script src="js/test-api-call.js"></script>
     <script src="js/post-card-flip.js"></script>
 
   </body>
