added hyperlinks to projects and modified padding and margin in section titles

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 
     <div class="device-wrapper">
       <div class="device-row">
-        <div class="project"><img class="project-mock"/></div>
-        <div class="project"><img class="project-mock"/></div>
-        <div class="project"><img class="project-mock tearoom"/></div>
+        <div class="project-mock"></div>
+        <div class="project-mock"></div>
+        <a href="https://github.com/le-christine/tea-room" target="_blank"><div class="project-mock tearoom"></div></a>
       </div>
       <div class="device-row">
-        <div class="project"><img class="project-mock dentist"/></div>
-        <div class="project"><img class="project-mock spottunes"/></div>
-        <div class="project"><img class="project-mock weather"/></div>
+        <a href="https://le-christine.github.io/my-dentist-website/" target="_blank"><div class="project-mock dentist"></div></a>
+        <div class="project-mock spottunes"></div>
+        <a href="https://le-christine.github.io/weather-app/" target="_blank"><div class="project-mock weather"></div></a>
       </div>
     </div>
 
