added media query for max-width: 450px

--- a/about.html
+++ b/about.html
@@ -12,12 +12,12 @@
 </head>
 <body>
   <header>
-  <h1><a href="/index.html">Christine Le</a></h1>
+  <h1><a href="./index.html">Christine Le</a></h1>
     <nav>
       <a href="/about.html">about</a>
-      <a href="/index.html#projects">projects</a>
+      <a href="./index.html#projects">projects</a>
       <a href="#">resume</a>
-      <a href="/index.html#contact">contact</a>
+      <a href="./index.html#contact">contact</a>
     </nav>
   </header>
 
