--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <h1><a href="/index.html">Christine Le</a></h1>
     <nav>
-      <a href="/about.html">about</a>
+      <a href="./about.html">about</a>
       <a href="#projects">projects</a>
       <a href="#">resume</a>
       <a href="#contact">contact</a>
@@ -74,7 +74,10 @@
           </div>
         </div>
       </div>
+
     </div>
+
+
 
     <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-firestore.js"></script>
