--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Christine Le</title>
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/contact.css">
+  <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Glegoo:400,700|Raleway|Satisfy&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/24e1f3bbee.js" crossorigin="anonymous"></script>
 </head>
@@ -63,7 +63,7 @@
           </div>
 
           <div id="rightbox">
-            <button onClick="flipBack();postAnEmail()" class="send">Send
+            <button onClick="flipBack();postAnEmail()" class="send back-send" >Send
             </button>
             <div id="input">
               <input class="userName" type="text" name="name" placeholder="Name">
