added CNAME file

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </div>
 
           <div id="rightbox">
-            <button touchStart="flipBack();postAnEmail" onClick="flipBack();postAnEmail()" class="send back-send" >Send
+            <button ontouchstart="flipBack();postAnEmail" onClick="flipBack();postAnEmail()" class="send back-send" >Send
             </button>
             <div id="input">
               <input class="userName" type="text" name="name" placeholder="Name">
