--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Christine Le</title>
+  <link rel="shortcut icon" type="image/png" href="noun_developer_favicon.png" />
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/contact.css">
   <link rel="stylesheet" href="css/style.css">
+
   <link href="https://fonts.googleapis.com/css?family=Glegoo:400,700|Raleway|Satisfy&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/24e1f3bbee.js" crossorigin="anonymous"></script>
 </head>
