--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <div class="card">
         <div id="postcard-front">
-            <input type="submit" onClick="flip()" class="send"/>
+          <button onClick="flip()" class="send"><i class="fa fa-paper-plane"></i></button>
         </div>
 
         <div id="postcard-back">
