changed the contact call to action on mobile

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
           </div>
         </div>
       </div>
+      <button class="contact-btn"><a href = "mailto:christine.le244@gmail.com">Get in touch</a><button>
+
 
     </div>
 
