--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
         </div>
       </div>
-      <button class="contact-btn"><a href = "mailto:christine.le244@gmail.com">Get in touch</a><button>
+      <button class="contact-btn"><a href = "mailto:christine.le244@gmail.com">Get in touch</a></button>
 
 
     </div>
