added two projects

--- a/index.html
+++ b/index.html
@@ -39,13 +39,17 @@
 
     <div class="device-wrapper">
       <div class="device-row">
-        <div class="project-mock"></div>
-        <div class="project-mock"></div>
+        <a class="wip">
+          <div class="project-mock your-city-cares">
+            <p>Work in Progress</p>
+          </div>
+        </a>
+        <a href = "https://github.com/le-christine/rock-paper-scissors" target="_blank"><div class="project-mock rock-paper-scissors"></div></a>
         <a href="https://github.com/le-christine/tea-room" target="_blank"><div class="project-mock tearoom"></div></a>
       </div>
       <div class="device-row">
         <a href="https://le-christine.github.io/my-dentist-website/" target="_blank"><div class="project-mock dentist"></div></a>
-        <div class="project-mock spottunes"></div>
+        <a href ="https://github.com/le-christine/SpotTunes" target="_blank"><div class="project-mock spottunes"></div></a>
         <a href="https://le-christine.github.io/weather-app/" target="_blank"><div class="project-mock weather"></div></a>
       </div>
     </div>
