Uploaded my resume and navlink links to it

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
       <a href="./about.html">about</a>
       <a href="#projects">projects</a>
-      <a href="#">resume</a>
+      <a href="static/Christine-Le-Resume.pdf">resume</a>
       <a href="#contact">contact</a>
     </nav>
   </header>
