changed tag line to software engineer

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <div class="brand-statement-bg">
     <div class="brand-statement">
-      <h2>Full Stack Developer based in NYC<br/> passionate about making
+      <h2>Software Engineer based in NYC<br/> passionate about making
         tech<br/> accessible to all.</h2>
         <div class = "social-links">
           <a href="https://www.linkedin.com/in/christinele3/" target="_blank"><i class="fab fa-linkedin"></i></a>
