Replaced Spot Tunes project with Pixel Art

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
       <div class="device-row">
         <a href="https://le-christine.github.io/my-dentist-website/" target="_blank"><div class="project-mock dentist"></div></a>
-        <a href ="https://github.com/le-christine/SpotTunes" target="_blank"><div class="project-mock spottunes"></div></a>
+        <a href ="http://christinele.nyc/pixelart/" target="_blank"><div class="project-mock pixelart"></div></a>
         <a href="https://le-christine.github.io/weather-app/" target="_blank"><div class="project-mock weather"></div></a>
       </div>
     </div>
