Revised brand statement on about page

--- a/about.html
+++ b/about.html
@@ -26,15 +26,7 @@
     </div>
 
       <p>
-        I am a Full-Stack Developer with experience in health
-        tech passionate about making tech accessible to all.
-        I am empathetic and analytical, which enables me to develop
-        efficient and approachable products. I connect the needs of
-        businesses and consumers by distilling data to help people
-        feel more confident in their decision making. Whether it’s
-        in a group or individual setting my sharp attention to detail
-        enables me to anticipate challenges and adapt to meet project needs.
-      </p>
+        I am a Software Engineer with experience in health tech, passionate about making tech accessible to all. My careful analytical skills and empathic understanding of my clients' needs enable me to merge efficiency and usability in the products I create.  In each project, I seek to connect the needs of businesses and consumers, using data to help them feel more confident in their decision making. Whether in a group or individually, I am both detail-focused and adaptable, which helps me anticipate and solve challenges while remaining flexible to changing circumstances. 
 
 </div>
 </body>
