feat(2022-refresh): Added project, revised about page

--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@
   <header>
   <h1><a href="./index.html">Christine Le</a></h1>
     <nav>
-      <a href="/about.html">about</a>
+      <a href="#">about</a>
       <a href="./index.html#projects">projects</a>
-      <a href="#">resume</a>
+      <!-- <a href="#">resume</a> -->
       <a href="./index.html#contact">contact</a>
     </nav>
   </header>
@@ -26,7 +26,13 @@
     </div>
 
       <p>
-        I am a Software Engineer with experience in health tech, passionate about making tech accessible to all. My careful analytical skills and empathic understanding of my clients' needs enable me to merge efficiency and usability in the products I create.  In each project, I seek to connect the needs of businesses and consumers, using data to help them feel more confident in their decision making. Whether in a group or individually, I am both detail-focused and adaptable, which helps me anticipate and solve challenges while remaining flexible to changing circumstances. 
+        Hi! I'm Christine Le (pronounced "lay"), a software engineer currently working at American Express. My educational background is in Biology and Bioinformatics. After my first job at a biotechnology start-up, I attended General Assembly's Software Engineering Immersive to fill my knowledge gaps in software development. I am driven by making tech accessible to all and helping companies facilitate decision-making based on data.
+
+        <br/>
+        <br/>
+      </p>
+
+
 
 </div>
 </body>
