--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@
     <nav>
       <a href="./about.html">about</a>
       <a href="#projects">projects</a>
-      <a href="static/Christine-Le-Resume.pdf">resume</a>
+      <!-- <a href="static/resume.pdf">resume</a> -->
       <a href="#contact">contact</a>
     </nav>
   </header>
 
   <div class="brand-statement-bg">
     <div class="brand-statement">
-      <h2>Software Engineer based in NYC<br/> passionate about making
-        tech<br/> accessible to all.</h2>
+      <h2>Software Engineer</h2>
         <div class = "social-links">
           <a href="https://www.linkedin.com/in/christinele3/" target="_blank"><i class="fab fa-linkedin"></i></a>
           <a href ="https://github.com/le-christine" target="_blank"><i class="fab fa-github"></i></a>
@@ -39,17 +38,13 @@
 
     <div class="device-wrapper">
       <div class="device-row">
-        <a class="wip">
-          <div class="project-mock your-city-cares">
-            <p>Work in Progress</p>
-          </div>
-        </a>
+        <a href="https://github.com/le-christine/community-cares" target="_blank"><div class="project-mock your-city-cares"></div></a>
         <a href = "https://github.com/le-christine/rock-paper-scissors" target="_blank"><div class="project-mock rock-paper-scissors"></div></a>
         <a href="https://github.com/le-christine/tea-room" target="_blank"><div class="project-mock tearoom"></div></a>
       </div>
       <div class="device-row">
         <a href="https://le-christine.github.io/my-dentist-website/" target="_blank"><div class="project-mock dentist"></div></a>
-        <a href ="http://christinele.nyc/pixelart/" target="_blank"><div class="project-mock pixelart"></div></a>
+        <a href ="https://le-christine.github.io/pixelart/" target="_blank"><div class="project-mock pixelart"></div></a>
         <a href="https://le-christine.github.io/weather-app/" target="_blank"><div class="project-mock weather"></div></a>
       </div>
     </div>
